--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,7 @@
   </dependencies>
 
   <build>
+    <pluginManagement>
     <plugins>
       <!-- Build and Run -->
       <plugin>
@@ -268,5 +269,6 @@
         </executions>
       </plugin>
     </plugins>
+      </pluginManagement>
   </build>
 </project>
